fixed image stretching, made header background image static

--- a/docs/less/home-page.less
+++ b/docs/less/home-page.less
@@ -3,8 +3,9 @@
 .homepage-header {
   height: 600px;
   background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../img/salt1.jpg) @bg-color-two;
-  background-size: cover;
+  background-size: auto;
   background-repeat: no-repeat;
+  background-position: center;
 
   .custom-layout(@direction: column);
 
@@ -107,18 +108,14 @@
 .content-section {
   .custom-layout( @direction:row-reverse,);
   padding: 20px 30px;
-  height: 450px;
   width: 95%; 
 
   @media @phone {
     flex-direction: column;
-    height: 600px;
   }
 
   .img-container {
     width: 48%;
-    height: 100%; 
-    max-height: 100%;
     .custom-layout(@justify: flex-start);
 
     @media @phone {
@@ -128,14 +125,9 @@
     }
 
     img {
-      height: 400px;
-      width: auto;
-      max-width: 100%;
+      width: 100%;
+      max-width: 400px;
       border-radius: 10px;
-
-      @media @phone {
-        height: 290px;
-      }
     }
   }
 
